# readthedocs-cli

./: .gitignore  LICENSE  README.rst  setup.cfg
src/readthedocs_cli/: __init__.py  __main__.py
src/readthedocs_cli/api/: __init__.py  unofficial.py  v3.py
