[metadata]
name = readthedocs-cli
version = attr: readthedocs_cli.__version__
author = Thomas Sibley
author_email = tsibley@fredhutch.org
description = A CLI for the Read The Docs v3 API
long_description = file: README.rst
url = https://github.com/nextstrain/readthedocs-cli
project_urls =
    Bug Tracker = https://github.com/nextstrain/readthedocs-cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    click >=8
    requests
    rich
    pyyaml

[options.extras_require]
maintainers-sync =
    beautifulsoup4
    browser-cookie3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rtd = readthedocs_cli:rtd
